--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,21 @@
      "version": 2,
      "builds": [
        {
-         "src": "src/index.ts",
+         "src": "api/index.ts",
          "use": "@vercel/node"
        }
      ],
      "routes": [
        {
          "src": "/(.*)",
-         "dest": "src/index.ts"
+         "dest": "api/index.ts"
        }
      ],
+     "functions": {
+       "api/index.ts": {
+         "maxDuration": 60
+       }
+     },
      "env": {
        "NODE_ENV": "production"
      }
