--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "prisma generate && tsc",
     "start": "node dist/index.js",
     "test": "jest",
-    "vercel-build": "prisma generate && tsc",
+    "vercel-build": "npm run prisma:generate && tsc",
+    "prisma:generate": "prisma generate",
     "postinstall": "prisma generate"
   },
   "dependencies": {
