Fix backend deployment issues
- Update Prisma schema to use PostgreSQL instead of SQLite
- Add simple serverless function without complex dependencies
- Switch to simple.ts to avoid Prisma initialization issues
- Add DATABASE_URL_NON_POOLING to env example
- Simplify deployment to get basic API working first

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ OPENROUTER_API_KEY=sk-or-your-api-key-here
 
 # Database Configuration (if using persistence)
 DATABASE_URL=postgresql://username:password@localhost:5432/redteam_db
+DATABASE_URL_NON_POOLING=postgresql://username:password@localhost:5432/redteam_db
 
 # Redis Configuration (for job queuing and rate limiting)
 REDIS_URL=redis://localhost:6379
