Create minimal working Vercel function
- Simplified api/index.ts to basic Vercel function
- Removed all complex dependencies (Express, Prisma, etc.)
- Use minimal vercel.json configuration
- Remove build scripts that cause issues
- Pure serverless function approach
- Multiple test endpoints for debugging

--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,7 @@
 {
-     "version": 2,
-     "builds": [
-       {
-         "src": "api/simple.ts",
-         "use": "@vercel/node"
-       }
-     ],
-     "routes": [
-       {
-         "src": "/(.*)",
-         "dest": "api/simple.ts"
-       }
-     ],
-     "functions": {
-       "api/simple.ts": {
-         "maxDuration": 30
-       }
-     },
-     "env": {
-       "NODE_ENV": "production"
-     }
-   }
+  "functions": {
+    "api/index.ts": {
+      "maxDuration": 30
+    }
+  }
+}
