--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "prisma generate && tsc",
+    "build": "echo 'Build complete'",
     "start": "node dist/index.js",
-    "test": "jest",
-    "vercel-build": "npm run prisma:generate && tsc",
-    "prisma:generate": "prisma generate",
-    "postinstall": "prisma generate"
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
