Add public directory and fix Vercel routing
- Create public/index.html to satisfy Vercel build requirements
- Update vercel.json with proper routing configuration
- Add outputDirectory specification
- Separate API routes from static routes
- Add informational landing page for API documentation

--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,17 @@
   },
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
+      "dest": "/api/index.ts"
+    },
+    {
+      "src": "/(health|test|echo|env)",
+      "dest": "/api/index.ts"
+    },
+    {
+      "src": "/",
       "dest": "/api/index.ts"
     }
-  ]
+  ],
+  "outputDirectory": "public"
 }
